# Iris

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  main.cpp
header_files/: application.h  dataTypes.h
src/: application.cpp
src/kernels/: BlackHole.metal
